--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
      <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
      <title>Nuno Job - {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
-     <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
+     <link href="http://feeds.feedburner.com/nunojobblog" rel="alternate" title="Nuno Job" type="application/atom+xml" />
      <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
   </head>
@@ -27,7 +27,7 @@
           </p>
         </div>
         <div class="rss">
-          <a href="http://feeds.feedburner.com/nunojob">
+          <a href="http://feeds.feedburner.com/nunojobblog">
             <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
           </a>
         </div>
