added back button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <div class="site">
       <div class="title">
         <a href="/">Nuno Job</a>
+        <a class="extra" href="http://nunojob.com">back to nunojob.com</a>
       </div>
       {{ content }}
       <div class="footer">
