--- a/css/screen.css
+++ b/css/screen.css
@@ -23,10 +23,10 @@ ul.posts { list-style-type: none; margin-bottom: 2em; }
   .title { color: #036; font-weight: bold; margin-bottom: 2em; }
 .site .title a:link,.site .title a:visited { color: #036; text-decoration: none; font-size: 4em; margin-left: -.5em; }
 .site .title a:hover { color: #FB2; }
-.site .title a.extra { color: #DEF; text-decoration: none; margin-left: 1em; font-size: 50%;}
+.site .title a.extra { color: #DEF; text-decoration: none; margin-left: 1em; font-size: 75%;}
 .site .title a.extra:hover { color: black; }
 .site .meta { color: #DEF; font-style: italic; }
-.site .footer { font-size: 80%; color: #FB2; border-top: 4px solid #eee; margin-top: 2em; overflow: hidden; }
+.site .footer { font-size: 80%; color: #FB2; border-top: 4px solid #FB2; margin-top: 2em; overflow: hidden; }
 .site .footer .contact { float: left; margin-right: 3em; }
 .site .footer .contact a { color: #DEF; }
 .site .footer .rss { margin-top: 1.1em; margin-right: -.2em; float: right; }
