--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,7 @@
           </p>
         </div>
         <div class="rss">
-          <a href="http://feeds.feedburner.com/nunojobblog">
-            <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-          </a>
+          <a href="http://feeds.feedburner.com/nunojobblog">Subscribe</a>
         </div>
       </div>
     </div>
