--- a/css/screen.css
+++ b/css/screen.css
@@ -26,9 +26,8 @@ ul.posts { list-style-type: none; margin-bottom: 2em; }
 .site .title a.extra { color: #DEF; text-decoration: none; margin-left: 1em; font-size: 75%;}
 .site .title a.extra:hover { color: black; }
 .site .meta { color: #DEF; font-style: italic; }
-.site .footer { font-size: 80%; color: #FB2; border-top: 4px solid #FB2; margin-top: 2em; overflow: hidden; }
+.site .footer { font-size: 80%; color: #def; border-top: 4px solid #FB2; margin-top: 2em; overflow: hidden; }
 .site .footer .contact { float: left; margin-right: 3em; }
-.site .footer .contact a { color: #DEF; }
 .site .footer .rss { margin-top: 1.1em; margin-right: -.2em; float: right; }
 .site .footer .rss img { border: 0; }
 /* posts */
