--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
      <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
      <title>Nuno Job - {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
-     <link href="http://feeds.feedburner.com/nunojobblog" rel="alternate" title="Nuno Job" type="application/atom+xml" />
+     <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
      <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
+     <link rel="SHORTCUT ICON" href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" /> 
   </head>
   <body>
     <div class="site">
@@ -28,7 +29,7 @@
           </p>
         </div>
         <div class="rss">
-          <a href="http://feeds.feedburner.com/nunojobblog">Subscribe</a>
+          <a href="http://feeds.feedburner.com/nunojob">Subscribe</a>
         </div>
       </div>
     </div>
