--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,7 @@ ul.posts { list-style-type: none; margin-bottom: 2em; }
 .site .title a.extra:hover { color: #FB2; }
 .site .meta { color: #DEF; font-style: italic; }
 .site .footer { font-size: 80%; color: #def; border-top: 1px solid #FB2; margin-top: 2em; overflow: hidden; }
-.site .footer .contact { float: left; margin-right: 3em; }
+.site .footer .contact { float: left; margin-right: 3em; color: #FB2; }
 .site .footer .rss { margin-top: 1.1em; margin-right: 0em; float: right; }
 .site .footer .rss img { border: 0; }
 /* posts */
