--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ blockquote { margin: 1em 3em; color: #999; border-left: 2px solid #999; padding-
 /* posts */
 ul.posts { list-style-type: none; margin-bottom: 2em; }
   ul.posts li { line-height: 1.75em; }
-  ul.posts span{ color: #DEF; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1em; font-style: italic; }
+  ul.posts span{ color: #036; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1em; font-style: italic; }
 /* site */
 .site { font-size: 110%; text-align: left; width: 40em; margin: 3em auto 2em auto; line-height: 1.5em; }
   .title { color: #036; font-weight: bold; margin-bottom: 2em; }
@@ -27,7 +27,7 @@ ul.posts { list-style-type: none; margin-bottom: 2em; }
 .site .title a.extra:hover { color: #FB2; }
 .site .meta { color: #DEF; font-style: italic; }
 .site .footer { font-size: 80%; color: #def; border-top: 1px solid #FB2; margin-top: 2em; overflow: hidden; }
-.site .footer .contact { float: left; margin-right: 3em; color: #FB2; }
+.site .footer .contact { float: left; margin-right: 3em; color: #036; }
 .site .footer .rss { margin-top: 1.1em; margin-right: 0em; float: right; }
 .site .footer .rss img { border: 0; }
 /* posts */
