--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <div class="contact">
           <p>
             Nuno Job <br/>
-            nunojobpinto at gmail<br/>
+            <a href="mailto:nuno@dscape.org">nuno@dscape.org</a><br/>
           </p>
         </div>
         <div class="contact">
