--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
      <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-     <title>Nuno Job - {{ page.title }}</title>
+     <title>Nuno's Notebook — {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
-     <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-     <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
-     <link rel="SHORTCUT ICON" href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" /> 
+     <link rel="stylesheet" href="css/syntax.css" type="text/css" />
+     <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection"/>
+     <link rel="SHORTCUT ICON" 
+href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" /> 
   </head>
   <body>
     <div class="site">
       <div class="title">
-        <a href="/">Nuno Job</a>
-        <a class="extra" href="http://nunojob.com">back to nunojob.com</a>
+        <a href="/">Nuno's Notebook</a> 
+        <a class="extra" href="http://nunojob.com">❦</a>
       </div>
       {{ content }}
-      <div class="footer">
-        <div class="contact">
-          <p>
-            Nuno Job <br/>
-            <a href="mailto:nuno@dscape.org">nuno@dscape.org</a><br/>
-          </p>
-        </div>
-        <div class="contact">
-          <p>
-            <a href="http://github.com/dscape/">github.com/dscape</a><br />
-            <a href="http://twitter.com/dscape/">twitter.com/dscape</a><br />
-          </p>
-        </div>
-        <div class="rss">
-          <a href="http://feeds.feedburner.com/nunojob">Subscribe</a>
-        </div>
+      <div class="footer"> 
+        <div class="rss"> 
+          <a href="http://feeds.feedburner.com/nunojob">rss</a> 
+        </div> 
       </div>
-    </div>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-20054795-2']);
