added google fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,13 @@
      <title>Nuno's Notebook — {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
-     <link rel="stylesheet" href="css/syntax.css" type="text/css" />
      <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection"/>
+     <link rel="stylesheet" type="text/css" 
+           href="http://fonts.googleapis.com/css?family=Special+Elite">
+      <link rel="stylesheet" type="text/css" 
+            href="http://fonts.googleapis.com/css?family=Cardo">
+      <link rel="stylesheet" type="text/css" 
+            href="http://fonts.googleapis.com/css?family=Pacifico">
      <link rel="SHORTCUT ICON" 
 href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" /> 
   </head>
