--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,5 @@
 body     { line-height: 1.5em ; margin: 100px 0 0 75px ;
-  font-family: 'Cardo', Times, serif ; font-size: 18pt ; }
+  font-family: Times, serif ; font-size: 18pt ; }
 h1       { font-size: 1.5em; margin-top: 1.5em; }
 ul       { padding: 0; }
 ul li    { list-style-type: none; }
