check style partial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
       {{ content }}
       <div class="footer"> 
         <div class="rss"> 
-          <a href="http://feeds.feedburner.com/nunojob">rss</a> 
+          <a href="http://feeds.feedburner.com/nunojob">Subscribe</a> 
         </div> 
       </div>
     <script type="text/javascript">
