check style partial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
      <title>Nuno's Notebook — {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
-     <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection"/>
+     <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
      <link rel="stylesheet" type="text/css" 
            href="http://fonts.googleapis.com/css?family=Special+Elite">
       <link rel="stylesheet" type="text/css" 
