check style partial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
      <link rel="stylesheet" type="text/css" 
+           href="http://fonts.googleapis.com/css?family=Inconsolata">
+     <link rel="stylesheet" type="text/css" 
            href="http://fonts.googleapis.com/css?family=Special+Elite">
       <link rel="stylesheet" type="text/css" 
             href="http://fonts.googleapis.com/css?family=Cardo">
