check style partial

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" type="text/css" 
             href="http://fonts.googleapis.com/css?family=Inconsolata">
      <link rel="stylesheet" type="text/css" 
-            href="http://fonts.googleapis.com/css?family=Tangerine">
+            href="http://fonts.googleapis.com/css?family=Crimson+Text">
      <link rel="stylesheet" type="text/css" 
            href="http://fonts.googleapis.com/css?family=Special+Elite">
       <link rel="stylesheet" type="text/css" 
