--- a/css/screen.css
+++ b/css/screen.css
@@ -1,10 +1,9 @@
 body       { line-height: 1.5em ; margin: 100px 0 0 75px ;
-  font-family: Times, serif ; font-size: 18pt ; }
+  font-family: 'Crimson Text', Times, serif ; font-size: 18pt ; }
 h1         { font-size: 1.5em; margin-top: 1.5em; }
 ul         { padding: 0; }
 ul li      { list-style-type: none; }
 code       { font-family: 'Inconsolata', Courier, serif; color: #063; }
-blockquote p { font-family: 'Crimson Text', Times, serif;} 
 a:hover    { color: #036; }
 a:link, a:visited { color: #000; }
 .rss a, .title a            { text-decoration: none ; }
