--- a/css/screen.css
+++ b/css/screen.css
@@ -4,7 +4,7 @@ body       { line-height: 1.5em ; margin: 100px 0 0 75px ;
 h1         { font-size: 1.5em; margin-top: 1.5em; }
 ul         { padding: 0; }
 ul li      { list-style-type: none; }
-code       { font-family: 'Inconsolata', Courier, serif; color: #bada55; } 
+code       { font-family: 'Inconsolata', Courier, serif; color: #063; } 
 a:hover    { color: #00f; }
 a:link, a:visited { color: #000; }
 .rss a, .title a  { text-decoration: none ; }
