--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,11 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
         <a href="/">Nuno's Notebook</a> 
         <a class="extra" href="http://nunojob.com">❦</a>
       </div>
+      <div class="links">
+          <a href="http://nunojob.com">Homepage</a> 
+        ~ <a href="http://github.com/dscape">Github</a>
+        ~ <a href="http://twitter.com/dscape">Twitter</a>
+      </div>
       {{ content }}
       <div class="footer"> 
         <div class="rss"> 
