--- a/css/screen.css
+++ b/css/screen.css
@@ -8,8 +8,8 @@ code       { font-family: 'Inconsolata', Courier, serif; color: #063; }
 a:hover    { color: #00f; }
 a:link, a:visited { color: #000; }
 .rss a, .title a  { text-decoration: none ; }
-.title        { font-family: 'Special Elite', Times, serif;
-                font-size: 3em; margin-bottom: 1em; }
+.title        { font-family: 'Special Elite', Times, serif; font-size: 3em; }
+.links        { padding: 1em; }
 .footer       { margin-top: 2em; }
 a.extra       { color: #f00; }
 .rss a        { color: #036 ; }
