--- a/css/screen.css
+++ b/css/screen.css
@@ -14,4 +14,4 @@ a:link, a:visited { color: #000; }
 a.extra       { color: #f00; }
 .rss a        { color: #036 ; }
 .rss          { font-family: 'Pacifico', arial, serif; margin-right: 1.2em;
-                margin-bottom: 1em; text-align: right; font-size: 1.2em; }
+                margin-bottom: 1em; font-size: 1.2em; }
