--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div id="post">
   {{ content }}
 </div>
-<div id="disqus_thread"></div>
+<div class="disqus" id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'nunosnotebook'; 
     (function() {
