--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,17 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <script type="text/javascript">
+        var GoSquared={};
+        GoSquared.acct = "GSN-196597-W";
+        (function(w){
+            function gs(){
+                w._gstc_lt=+(new Date); var d=document;
+                var g = d.createElement("script"); g.type = "text/javascript"; g.async = true; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+                var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s);
+            }
+            w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs);
+        })(window);
+    </script>
   </body>
 </html>
