more info on writings page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,12 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
         <a href="/">Nuno's Notebook</a> 
         <a class="extra" href="http://nunojob.com">❦</a>
       </div>
+      <div class="desc">Geek. Open-source enthusiast. Shaping the future of the node.js ☁ <a href="http://www.nodejitsu.com"><b>@nodejitsu</b></a>. Founder <a href="http://thenodefirm.com"><b>@thenodefirm</b></a>&amp; curator <a href="http://lxjs.org"><b>@lxjs</b></a></div>
       <div class="links">
-          <a href="http://nunojob.com">Homepage</a> 
-        ~ <a href="http://github.com/dscape">Github</a>
+          <a href="http://github.com/dscape">Github</a>
         ~ <a href="http://twitter.com/dscape">Twitter</a>
+        ~ <a href="http://lanyrd.com/dscape">Lanyrd</a>
+        ~ <a href="https://github.com/dscape/NunoJobResume/raw/master/nunojob-resume.pdf">Resume</a>
       </div>
       {{ content }}
       <div class="footer"> 
