--- a/css/screen.css
+++ b/css/screen.css
@@ -1,14 +1,15 @@
 /* thank you jan.io and lexadecimal.com for inspiration */
-body       { line-height: 1.5em ; margin: 100px 0 0 75px ;
-             font-family: 'Crimson Text', Times, serif ; font-size: 18pt ; }
-h1         { font-size: 1.5em; margin-top: 1.5em; }
-ul         { padding: 0; }
-ul li      { list-style-type: none; }
-code       { font-family: 'Inconsolata', Courier, serif; color: #063; } 
-a:hover    { color: #00f; }
+body          { line-height: 1.5em; margin: 75px;
+                font-family: 'Crimson Text', Times, serif; font-size: 18pt; }
+h1            { font-size: 1.5em; margin-top: 1.5em; }
+ul            { padding: 0; }
+ul li         { list-style-type: none; }
+code          { font-family: 'Inconsolata', Courier, serif; color: #063; } 
+a:hover       { color: #00f; }
 a:link, a:visited { color: #000; }
 .rss a, .title a  { text-decoration: none ; }
 .title        { font-family: 'Special Elite', Times, serif; font-size: 3em; }
+.desc         { margin-top: 1em; margin-left: 1em; }
 .links        { padding: 1em; }
 .footer       { margin-top: 2em; }
 a.extra       { color: #f00; }
