[syntax] might be better now ?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
      <meta name="author" content="Nuno Job" />
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
+     <script src="/js/hi.js" type="text/javascript"/>
      <link rel="stylesheet" type="text/css" 
             href="http://fonts.googleapis.com/css?family=Inconsolata">
      <link rel="stylesheet" type="text/css" 
