--- a/css/github.css
+++ b/css/github.css
@@ -5,18 +5,10 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 */
 
 pre code {
-  display: block; padding: 0.5em;
+  display: block; 
   color: #000;
   background: #f8f8ff;
-  border-radius: 0.25em;
-  -moz-border-radius: 0.25em;
-  -0-border-radius: 0.25em;
-  -webkit-border-radius: 0.25em;
-  box-shadow: inset 0 0.1em 0.2em rgba(0,0,0, 0.3);
-  -moz-box-shadow: inset 0 0.1em 0.2em rgba(0,0,0, 0.3);
-  -o-box-shadow: inset 0 0.1em 0.2em rgba(0,0,0, 0.3);
-  -webkit-box-shadow: inset 0 0.1em 0.2em rgba(0,0,0, 0.3);
-  margin-bottom: 1.5em;
+  overflow-y: scroll;
 }
 
 pre .comment,
