--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
      <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-     <title>Nuno's Notebook — {{ page.title }}</title>
+     <title>Nuno Job — {{ page.title }}</title>
      <meta name="author" content="Nuno Job" />
      <link href="http://feeds.feedburner.com/nunojob" rel="alternate" title="Nuno Job" type="application/atom+xml" />
      <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection"/>
@@ -20,7 +20,7 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
   <body>
     <div class="site">
       <div class="title">
-        <a href="/">Nuno's Notebook</a> 
+        <a href="/">Nuno Job</a> 
         <a class="extra" href="http://nunojob.com">❦</a>
       </div>
       <div class="desc">Geek. Open-source enthusiast. Shaping the future of the node.js ☁ <a href="http://www.nodejitsu.com"><b>@nodejitsu</b></a>. Founder <a href="http://thenodefirm.com"><b>@thenodefirm</b></a>&amp; curator <a href="http://lxjs.org"><b>@lxjs</b></a></div>
