--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ href="http://dygz78ls5cy51.cloudfront.net/c36dedd3a2d74935a52830dbe0587e98" />
         <a href="/">Nuno Job</a> 
         <a class="extra" href="http://nunojob.com">❦</a>
       </div>
-      <div class="desc">Geek. Open-source enthusiast. Shaping the future of the node.js ☁ <a href="http://www.nodejitsu.com"><b>@nodejitsu</b></a>. Founder <a href="http://thenodefirm.com"><b>@thenodefirm</b></a>&amp; curator <a href="http://lxjs.org"><b>@lxjs</b></a></div>
+      <div class="desc">Geek. Open-source enthusiast. Shaping the future of the node.js ☁ <a href="http://www.nodejitsu.com"><b>@nodejitsu</b></a>. Founder <a href="http://thenodefirm.com"><b>@thenodefirm</b></a>&amp; curator <a href="http://lxjs.org"><b>@lxjs</b></a><br/>This is the old blog, check the new one at <a href="http://nunojob.com">nunojob.com</a></div>
       <div class="links">
           <a href="http://github.com/dscape">Github</a>
         ~ <a href="http://twitter.com/dscape">Twitter</a>
